# Precision_AgriAI

./: .env.example  .gitignore  FALLBACK_FIX_SUMMARY.md  FALLBACK_FLOW_DIAGRAM.md  FALLBACK_HANDLING.md  FALLBACK_QUICK_REFERENCE.md  FALLBACK_USER_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT_STATUS.md  README.md  SETUP.md  TASKS_5_6_COMPLETE.md  TASKS_7_8_COMPLETE.md  TASK_9_COMPLETION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  app.py  asset_check.py  bangalore_map_demo.html  fusion_engine.py  gee_check.py  gee_diagnostics.py  generate_diagrams.py  metadata_check.py  poc_recommender.py  point_metadata_check.py  pyproject.toml  requirements.txt  summarizer.py  test_app.py  test_fetchers.py
.kiro/specs/precision-agriai/: design.md  requirements.md  tasks.md
config/: README.md  __init__.py  settings.py
docs/: configuration-implementation.md
examples/: README_BrainService.md  brain_service_demo.py  map_service_demo.py
scripts/: __init__.py  create_dynamodb_tables.py  setup_environment.py  validate_config.py
services/: README_MapService.md  __init__.py  brain_service.py  db_service.py  gee_service.py  integration.py  map_service.py  sentinel_service.py  sentry_service.py  sms_service.py  voice_service.py
tests/: README.md  __init__.py  conftest.py  hypothesis_config.py  pytest.ini  test_utils.py  verify_framework.py
tests/integration/: __init__.py
tests/property/: __init__.py  test_brain_service.py  test_data_persistence.py  test_framework_setup.py  test_map_interface.py  test_voice_service.py
tests/unit/: __init__.py  test_brain_service.py  test_db_service.py  test_gee_service.py  test_map_service.py  test_sentinel_service.py  test_sentry_service.py  test_voice_service.py
ui/: README.md  map_interface.py
