[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precision-agriai"
version = "0.1.0"
description = "Neuro-Symbolic Generative AI system for agricultural monitoring and intervention coordination"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Precision AgriAI Team"}
]
keywords = ["agriculture", "ai", "satellite", "aws", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Streamlit Application
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
    
    # AWS SDK and Services
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    
    # Data Processing and Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    
    # Geospatial Libraries
    "folium>=0.15.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "rasterio>=1.3.0",
    
    # Google Earth Engine
    "earthengine-api>=0.1.380",
    
    # HTTP Client
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Logging
    "loguru>=0.7.0",
    
    # Image Processing
    "Pillow>=10.0.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    
    # Date and Time
    "python-dateutil>=2.8.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    
    # Audio Processing
    "pydub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.88.0",
    "moto>=4.2.0",
    "pytest-cov>=4.1.0",
    
    # Development Tools
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    
    # Monitoring
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/precision-agriai/precision-agriai"
Documentation = "https://github.com/precision-agriai/precision-agriai/docs"
Repository = "https://github.com/precision-agriai/precision-agriai"
Issues = "https://github.com/precision-agriai/precision-agriai/issues"

[tool.setuptools]
packages = ["services", "config", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=services --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
